Dont send useless favicon requests

--- a/templates/day.html
+++ b/templates/day.html
@@ -5,6 +5,7 @@
         </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/site.css">
+        <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     </head>
     <body>
 
