--- a/templates/topscores.html
+++ b/templates/topscores.html
@@ -3,6 +3,7 @@
         <title>Top Scores ({{ .year }})</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/site.css">
+        <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     </head>
     <body>
 
