Show days completed in embedded totals view

--- a/templates/embed.html
+++ b/templates/embed.html
@@ -13,7 +13,7 @@
             </div>
             <div class="embed-list">
                 <h2>Totals</h2>
-                {{ template "_embed_table.html" .totalScores }}
+                {{ template "_embed_totals_table.html" .totalScores }}
             </div>
             <div class="embed-list">
                 <h2>Fastest overall</h2>
